[build-system]
requires = [ "setuptools>=42",]
build-backend = "setuptools.build_meta"

[project]
name = "tuya-tiny-web"
version = "1.3.1"
description = "A tiny web interface for Tuya devices"
dependencies = [ "flask>=2.0", "tinytuya>=0.5",]
[[project.authors]]
name = "@readwithai"
email = "talwrii@github.com"

[project.scripts]
tuya-tiny-web = "tuya_tiny_web.main:main"

[project.urls]
Homepage = "https://github.com/talwrii/tuya-tiny-web"
